crates/guicons-core/src/snapshots/guicons_core__parse__tests__explicit_size_feeds_default_iconify_id.snap
---
source: crates/guicons-core/src/parse.rs
expression: entries
---
[
    IconEntry {
        key: "settings-20-filled",
        family: "settings",
        variant: Some(
            "filled",
        ),
        size: Some(
            20,
        ),
        source: Iconify(
            "fluent:settings-20-filled",
        ),
        dynamic: false,
        windows_ico: None,
        paint: None,
        span: 57..59,
        file: "",
    },
]
