crates/guicons-core/src/snapshots/guicons_core__parse__tests__malformed_paint_is_an_error.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "`paint` must be `none` or a `#rgb`/`#rrggbb` color, got `red`",
    "`paint` must be `none` or a `#rgb`/`#rrggbb` color, got `#12345`",
]
