crates/guicons-core/src/snapshots/guicons_core__parse__tests__malformed_theme_paint_is_an_error.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "`paint` must be `\"none\"`, a `#rgb`/`#rrggbb` color, or `{ light = ..., dark = ... }`",
    "`paint` per theme needs both `light` and `dark`",
    "unexpected field(s): `sepia` (expected one of: `light`, `dark`)",
]
