crates/guicons-core/src/snapshots/guicons_core__parse__tests__mixing_own_fields_with_override_is_an_error.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "`providers.fluent` can't mix its own fields with `providers.fluent.override` - use one or the other",
]
