crates/guicons-core/src/snapshots/guicons_core__parse__tests__nested_groups_build_a_dashed_key.snap
---
source: crates/guicons-core/src/parse.rs
expression: entries
---
[
    IconEntry {
        key: "icons-navigation-back",
        family: "icons-navigation-back",
        variant: None,
        size: None,
        source: File(
            "/workspace/back.svg",
        ),
        dynamic: false,
        windows_ico: None,
        paint: None,
        span: 49..65,
        file: "",
    },
]
