crates/guicons-core/src/snapshots/guicons_core__parse__tests__numeric_path_segment_becomes_size_for_flat_entry.snap
---
source: crates/guicons-core/src/parse.rs
expression: entries
---
[
    IconEntry {
        key: "settings-20",
        family: "settings",
        variant: None,
        size: Some(
            20,
        ),
        source: File(
            "/workspace/settings-20.svg",
        ),
        dynamic: false,
        windows_ico: None,
        paint: None,
        span: 39..62,
        file: "",
    },
]
