crates/guicons-core/src/snapshots/guicons_core__parse__tests__numeric_path_segment_becomes_size_not_family.snap
---
source: crates/guicons-core/src/parse.rs
expression: entries
---
[
    IconEntry {
        key: "settings-20-filled",
        family: "settings",
        variant: Some(
            "filled",
        ),
        size: Some(
            20,
        ),
        source: File(
            "/workspace/settings-20-filled.svg",
        ),
        dynamic: false,
        windows_ico: None,
        paint: None,
        span: 57..92,
        file: "",
    },
    IconEntry {
        key: "settings-24-filled",
        family: "settings",
        variant: Some(
            "filled",
        ),
        size: Some(
            24,
        ),
        source: File(
            "/workspace/settings-24-filled.svg",
        ),
        dynamic: false,
        windows_ico: None,
        paint: None,
        span: 150..185,
        file: "",
    },
]
