crates/guicons-core/src/snapshots/guicons_core__parse__tests__override_on_a_non_builtin_name_is_an_error.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "`providers.acme.override` used, but `acme` isn't a built-in provider",
]
