crates/guicons-core/src/snapshots/guicons_core__parse__tests__parses_multiple_provider_schemas.snap
---
source: crates/guicons-core/src/parse.rs
expression: sorted_providers(&providers)
---
[
    (
        "fluent",
        ProviderSchema {
            variants: [
                "regular",
                "filled",
            ],
            sizes: [
                16,
                20,
                24,
                28,
                32,
                48,
            ],
        },
    ),
    (
        "phosphor",
        ProviderSchema {
            variants: [
                "thin",
                "light",
                "bold",
                "fill",
                "duotone",
            ],
            sizes: [],
        },
    ),
]
