crates/guicons-core/src/snapshots/guicons_core__parse__tests__provider_schema_rejects_wrong_field_type.snap
---
source: crates/guicons-core/src/parse.rs
expression: errors
---
[
    "expected an array, found string",
]
