crates/guicons-core/src/snapshots/guicons_core__parse__tests__provider_without_variants_or_sizes_defaults_to_empty.snap
---
source: crates/guicons-core/src/parse.rs
expression: sorted_providers(&providers)
---
[
    (
        "lucide",
        ProviderSchema {
            variants: [],
            sizes: [],
        },
    ),
]
